--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue IM</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4435641_44ttb2pdqo.css">
 </head>
 <body>
     <div id="app"></div>
